--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,16 @@ body {
 	margin: 0;
 }
 
+h1 {
+	position: fixed;
+	top: 5px;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: center;
+	font-size: 24px;
+	font-weight: bold;
+}
+
 #controls {
     display: flex;
     flex-direction: column;
